codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__live_app_server_server_overloaded_retrying_state.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Reconnecting... 1/3 (0s • esc to interrupt)                                   "
"  └ Selected model is at capacity. Please try again later.                      "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
