codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup_configured_default.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for gpt-5.6-terra

  1. Low                   Fast responses with lighter reasoning
  2. Medium                Balances speed and reasoning depth for everyday
                           tasks
  3. High                  Greater reasoning depth for complex problems
› 4. Extra high (default)  Extra high reasoning depth for complex problems
  5. More reasoning…       Max and Ultra consume usage limits faster

  Press enter to confirm or esc to go back
