codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_attention_signal_warning.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
assertion_line: 144
expression: lines_to_single_string(&warning_lines)
---
⚠ Could not signal that the plan decision needs attention.
