codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_stash_indicator_compact.snap
---
source: tui/src/chatwidget/tests/prompt_stash.rs
expression: compact
---
"            "
"    stashed "
"› Ask Codex "
"            "
"  custom sta"
