codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_stash_indicator_omitted.snap
---
source: tui/src/chatwidget/tests/prompt_stash.rs
expression: omitted
---
"      "
"      "
"› Ask "
"      "
"  cust"
