codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_stash_indicator_wide.snap
---
source: tui/src/chatwidget/tests/prompt_stash.rs
expression: wide
---
"                                                                                "
"                                                                  draft stashed "
"› replacement draft that should retain its existing textarea wrapping while     "
"  stashed                                                                       "
"                                                                                "
"  custom status                                                                 "
