codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__prompt_stash_restored_while_turn_running.snap
---
source: tui/src/chatwidget/tests/prompt_stash.rs
expression: "render_bottom_popup(&prompt, 80)"
---
• Working (0s • esc to interrupt)


› original draft

  tab to queue message                                       100% context left
